HVAC Backup 2/objects/Failure_Attribute__c(1).object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Family__c</fullName>
        <label>Sub Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>Symptom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Failure Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sub_Family__c</columns>
        <columns>Symptom__c</columns>
        <columns>Defect__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Failure Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>